--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Hector ",
+  "name": "Data",
   "version": "1.0.0",
   "description": "First version of resume that I have been working to get experience with front-end word",
   "author": "Hector Mata",
@@ -13,7 +13,9 @@
     "Full-Stack Developer"
   ],
   "dependencies": {
-    
+    "express": "^4.17.1",
+    "requirejs": "^2.3.6",
+    "require": "^2.4.20"
   },
   "license": "MIT"
 }
