--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "homepage": "https://github.com/hectormata/resume.github.io",
   "keywords": [
     "Software Engineer",
+    "Full Stack Engineer",
     "Developer",
     "resume",
     "experience",
